# QubePixel

./: .gitignore  ARCHITECTURE-CONFIG.md  ARCHITECTURE-ENTRY.md  ARCHITECTURE-GI.md  ARCHITECTURE-INVARIANTS.md  ARCHITECTURE-RENDERING.md  ARCHITECTURE-WORLD.md  AUDIT-FLOW-FILL.md  AUDIT-FULL.md  AUDIT-RADIANCE-CASCADES.md  BLOCKS-CONFIG-GUIDE.md  CLAUDE.md  Cargo.toml  LIGHTING_RESTORE_GUIDE.md  WORKLOG-ROTATION-TREES.md  example.json  example_javaed.json  minecraft_java_biomes_guide.md  model.geo.json
assets/: BLOCKS_README.md  block_registry.json  chunk_config.json  lighting_config.json  player_model.json  world_gen_config.json
assets/blocks/: block_registry.json  dirt.json  glass.json  glass_red.json  glowstone.json  grass.json  gravel.json  ice.json  lava.json  redstone_furnace.json  sand.json  snow.json  spotlight.json  stone.json  test_block.json  test_model_be.json  water.json
src/: core.rs  main.rs  screens.rs
src/core/: block_model.rs  config.rs  egui_fonts.rs  egui_manager.rs  egui_style.rs  entity.rs  frame_timing.rs  gameobjects.rs  input_controller.rs  lighting.rs  lighting_legacy.rs  logging.rs  model_messenger.rs  physics.rs  player.rs  player_model.rs  radiance_cascades.rs  raycast.rs  renderer.rs  save_system.rs  screen.rs  screen_manager.rs  upload_worker.rs  user_settings.rs  volumetric_lights.rs  world_gen.rs
src/screens/: bitmap_font.rs  block_editor.rs  block_editor_screen.rs  block_model_renderer.rs  block_preview_renderer.rs  button.rs  debug_overlay.rs  entity_renderer.rs  game_3d_pipeline.rs  game_screen.rs  gpu_info.rs  hand_block_renderer.rs  inventory.rs  main_menu.rs  player_renderer.rs  profiler_overlay.rs  settings.rs  sky_renderer.rs  ui_renderer.rs  worldgen_visualizer.rs  (+1 more)
(+115 files in other folders)
