[package]
name = "QubePixel"
version = "0.1.0"
edition = "2024"

[dependencies]
# Графика и окно
wgpu = "0.19"
winit = "0.29"
image = "0.24"

# Математика и мир
glam = "0.24"
noise = "0.8"
rapier3d = "0.18"

# Архитектура и UI
hecs = "0.10"
egui = "0.24"

# Данные и сохранение
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Системные
rayon = "1.8"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }