[package]
name = "QubePixel"
version = "0.1.0"
edition = "2024"

[dependencies]
# Графика и окно
wgpu = "29.0.0"
winit = "0.30"
image = "0.24"

# Математика и мир
glam = "0.24"
noise = "0.8"
rapier3d = "0.32.0"

# Архитектура и UI
hecs = "0.10"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"

# Данные и сохранение
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Системные
rayon = "1.8"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }